# computer-agent

./: .gitignore  PROVIDER_DEBUGGING.md  README.md  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  test_providers.py
.claude/skills/rust-guidelines/: SKILL.md
.claude/skills/rust-guidelines/documentation-guidelines/: SKILL.md
.claude/skills/rust-guidelines/libraries-building/: SKILL.md
.claude/skills/rust-guidelines/libraries-ux/: SKILL.md
skills/ms-rust/: SKILL.md
skills/ms-rust/guidelines/ai-guidelines/: SKILL.md
skills/ms-rust/guidelines/application-guidelines/: SKILL.md
skills/ms-rust/guidelines/ffi-guidelines/: SKILL.md
skills/ms-rust/guidelines/libraries-interoperability/: SKILL.md
skills/ms-rust/guidelines/libraries-resilience/: SKILL.md
skills/ms-rust/guidelines/performance-guidelines/: SKILL.md
skills/ms-rust/guidelines/safety-guidelines/: SKILL.md
skills/ms-rust/guidelines/universal-guidelines/: SKILL.md
src/: App.tsx  BorderOverlay.tsx  MainWindow.tsx  MiniWindow.tsx  SpotlightWindow.tsx  VoiceWindow.tsx  ai_providers.py  anthropic.py  computer.py  gemini_provider.py  index.css  main.py  main.tsx  openai_provider.py  prompt_manager.py  store.py  voice_control.py  window.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_browser.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  api.rs  bash.rs  browser.rs  computer.rs  lib.rs  main.rs  mcp.rs  panels.rs  permissions.rs  storage.rs  voice.rs
src/components/: ChatView.tsx  MessagesDisplay.tsx  SettingsContent.tsx  VoiceOrb.tsx
src/hooks/: useAgent.ts
src/stores/: agentStore.ts
src/types/: index.ts
src/utils/: audio.ts  toolFormat.ts
wsl/: README.md  pyautogui_client.py  pyautogui_server.py  screenshot.py  test_move_pointer.py  test_pyautogui_mouse.py  test_pyqt.py
