[package]
name = "grunty"
version = "0.1.0"
description = "AI-powered computer control"
authors = ["you"]
edition = "2021"

[lib]
name = "grunty_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# async runtime
tokio = { version = "1", features = ["full", "sync"] }

# mouse/keyboard control
enigo = "0.6.1"

# screenshot capture
xcap = "0.8.0"

# image processing
image = "0.25.9"
base64 = "0.22"

# env vars
dotenvy = "0.15"

# error handling
thiserror = "2"
anyhow = "1"

# macos window level
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

